--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-to-print": "^2.15.1"
   },
   "devDependencies": {
