--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "invoice-gen",
   "version": "0.1.0",
+  "homepage": "https://amro045.github.io/invoice-gen",
   "private": true,
   "scripts": {
     "dev": "next dev",
